<resources>
    <string name="app_name">VDA</string>
    <string name="title_activity_app_info_screen">Sign in</string>
    <string name="menu_settings">Settings</string>
    <string name="choose_gallery">Choose From Gallery</string>
    <string name="internet_error">Either internet is not enabled on your mobile phone or there is no coverage in your area.</string>
    <string name="capture_camera">Capture From Camera</string>
    <string name="msg_enter_text_to_draw">Please enter text</string>
    <string name="msg_tap_image">Please tap on image to type text.</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="msg_please_wait">Please wait ...</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="empty_email">Please enter your email</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="empty_phone_number">Please enter a valid Area Code and Phone Number</string>
    <string name="invalid_field_length1">can not contain more than 150 characters</string>
    <string name="welcomeAppName">Maintenance Activity Card</string>
    <string name="welcomeMsg">Welcome to CP Manager</string>
    <string name="welcomeInfo">Use this app to document service referrals \nand other deficiencies in the field.</string>
    <string name="dontAskAgain">Don\'t show this again</string>
    <string name="documentConditions">Document conditions</string>
    <string name="includeInfo">Include relevant info</string>
    <string name="reviewSubmit">Review and submit</string>
    <string name="whatIsIrestore">What is iRestore?</string>
    <string name="title_activity_dashboard_screen">DashboardScreen</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="no_location">Fetching location, try again!</string>
    <string name="select_utility">Please select the Utility</string>
    <string name="error">Server Error, please try again later</string>
    <string name="enable_location">Please enable location services for iRestore CP Manager. </string>
    <string name="admin_approval">Thank you for registering for iRestore.</string>
    <string name="admin_approval_utility">Administrator will respond to your request within 48 hours and you will be notified of the response.</string>
    <string name="responsibleParty">Responsible Department*</string>
    <string name="problemType">Problem Type</string>
    <string name="priority">Priority</string>
    <string name="textviewCancel">Cancel</string>
    <string name="textviewAppName">VDA</string>
    <string name="textViewWire">Wire</string>
    <string name="textViewPoleTop">Pole Top</string>
    <string name="textViewSPLEquipment">SPL<br>Equipment</br></string>
    <string name="textViewPole">Pole</string>
    <string name="textViewTree">Tree</string>
    <string name="textViewOther">Other</string>
    <string name="buttonNext">Next</string>
    <string name="textviewPoledata">Pole Data</string>
    <string name="textviewPolenumber">Pole Number</string>
    <string name="textviewPoleheight">Pole Height</string>
    <string name="textviewFeederLine1">Feeder Line 1</string>
    <string name="textviewFeederLine2">Feeder Line 2</string>
    <string name="textviewtakePhoto">Take a photo\nfor reference</string>
    <string name="textviewPanorama">Panorama</string>
    <string name="polenumber_hint"><font size="12">Pole Number</font></string>
    <string name="feederline1_hint"><font size="12">Feeder Line1</font></string>
    <string name="feederline2_hint"><font size="12">Feeder Line2</font></string>
    <string name="pole_preferences">vda_polePreferences</string>
    <string name="scopes_preferences">vda_scopePreferences</string>
    <string name="metadataPreferences">vda_metadataPreferences</string>
    <string name="preference_file_key">vdaPreferences</string>
    <string name="preference_file_key_uidata">vdaPreferencesUIData</string>
    <string name="preference_file_key_filters">PreferencesFilters</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string name="title_activity_update_card">UpdateCardActivity</string>
    <string name="title_activity_sort">SortActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_android_camera_api">AndroidCameraApi</string>
    <string name="title_activity_manage_notification">ManageNotificationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_priority">PriorityActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_review_photos">ReviewPhotosActivity</string>
    <string name="title_activity_multiple_images">MultipleImagesActivity</string>
    <string name="title_activity_irestore_info">IRestoreInfoActivity</string>
    <string name="compass_interference_msg">Compass interference detected.\nPlease wave your device in a figure 8 pattern</string>
    <string name="instruction_tap_start">Tap to start</string>
    <string name="instruction_hold_vertically">Hold your device vertically</string>
    <string name="instruction_focusing">Focusing</string>
    <string name="instruction_first_shot">Rotate left or right or tap to restart</string>
    <string name="instruction_finish_shot">Tap to finish when ready or continue rotating</string>
    <string name="instruction_empty" />
    <string name="empty" />
    <string name="wb">White Balance</string>
    <string name="wb_locked_start">Locked On Start</string>
    <string name="wb_auto">Auto</string>
    <string name="wb_cloudy_daylight">Cloudy Daylight</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_incandescent">Incandescent</string>
    <string name="exp_auto">Auto</string>
    <string name="exp_locked">Locked</string>
    <string name="exp_locked_start">Locked On Start</string>
    <string name="flash_off">Off</string>
    <string name="latText">Lat</string>
    <string name="longText">Long</string>
    <string name="captureText">Capture</string>
    <string name="flash_on">On</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_torch">Torch</string>
    <string name="warning">Warning!!!</string>
    <string name="camera_error_msg">Cannot Access Camera, the application will close now.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="screen_error_msg">Screen resolution is not supported, the application will close now.</string>
    <string name="memory_full_dialog_text">"Memory full! Please delete some files to save the panorama."</string>
    <string name="sdcard_error_dialog_text">"USB storage unavailable! Panorama can't be saved."</string>
</resources>