<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/HeaderBar"
        android:background="@drawable/ic_toolbar_design"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/topToolbar_TextView_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="#b9b6b6"
        android:text="@string/textviewCancel"
        app:layout_constraintLeft_toLeftOf="@+id/topToolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:typeface="sans"/>

    <TextView
        android:id="@+id/topToolbar_TextView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:typeface="sans"
        android:shadowColor="#eaeaea"
        android:shadowRadius="3.5"
        android:shadowDx="1"
        android:shadowDy="1"
        android:textSize="17sp"
        android:textColor="#b9b6b6"
        android:text="@string/textviewAppName"
        app:layout_constraintLeft_toLeftOf="@+id/topToolbar"
        app:layout_constraintTop_toTopOf="@+id/topToolbar"
        app:layout_constraintRight_toRightOf="@+id/topToolbar"
        />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/wire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/wire"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <ImageView
            android:id="@+id/poleTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pole_top"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>
        <ImageView
            android:id="@+id/splEquipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pole_equip"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <ImageView
            android:id="@+id/pole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pole"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>
        <ImageView
            android:id="@+id/tree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tree"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>
        <ImageView
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/other"
            android:adjustViewBounds="true"/>
        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonNext"
            android:textColor="@color/white"
            android:background="@color/lightGray"
            style="@style/TextStyleDarkTitleWhite"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:textAllCaps="false"
            android:enabled="false"
            android:clickable="false"
            android:gravity="clip_horizontal|center"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>